Implemented framework for downloading data from Projects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export("%>%")
 export(get_highbond_results)
-export(list_projects)
+export(get_project)
 export(post_highbond_results)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,inner_join)
