Tighten up note checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,31 @@ export(get_highbond_results)
 export(get_project)
 export(post_highbond_results)
 importFrom(dplyr,anti_join)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,select)
 importFrom(dplyr,vars)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
+importFrom(httr,content)
+importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(lubridate,as_datetime)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
+importFrom(tidyjson,append_values_string)
+importFrom(tidyjson,enter_object)
+importFrom(tidyjson,gather_array)
+importFrom(tidyjson,gather_object)
+importFrom(tidyjson,jstring)
+importFrom(tidyjson,spread_all)
+importFrom(tidyjson,spread_values)
+importFrom(tidyr,nest)
 importFrom(utils,capture.output)
 importFrom(utils,object.size)
