Bugfix hb_url_project's project_type url builder.
Insert better field specification handling, requiring vectors.

Removed relationships out of the content_attributes() and into its own hb_prj_parse_rel(), as not all endpoints give relationships.

Removed 'component' checks for each hb_prj_parse_* function, and instead added checks to force them to return NULL if no data is found.

hb_prj_coljoin_data() amended to check for nulls instead of components.

Added warning to hb_prj_get_controller() if json call was valid, but returned no data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export("%>%")
 export(get_highbond_results)
 export(get_project)
+export(get_project_planning_file)
+export(get_project_type)
 export(post_highbond_results)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_rows)
