--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,21 @@
 export("%>%")
 export(get_highbond_results)
 export(get_project)
+export(get_project_actions)
+export(get_project_control)
+export(get_project_control_test_plans)
+export(get_project_control_tests)
+export(get_project_entity)
+export(get_project_issue)
+export(get_project_mitigation)
+export(get_project_narrative)
+export(get_project_objective)
 export(get_project_planning_file)
+export(get_project_request_items)
+export(get_project_results_file)
+export(get_project_risk)
 export(get_project_type)
+export(get_project_walkthrough)
 export(post_highbond_results)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_rows)
