--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(get_highbond_results)
 export(get_project)
 export(get_project_actions)
 export(get_project_control)
-export(get_project_control_test_plans)
-export(get_project_control_tests)
+export(get_project_control_test)
+export(get_project_control_test_plan)
 export(get_project_entity)
 export(get_project_issue)
 export(get_project_mitigation)
@@ -14,7 +14,7 @@ export(get_project_narrative)
 export(get_project_objective)
 export(get_project_planning_file)
 export(get_project_request_items)
-export(get_project_results_file)
+export(get_project_result_file)
 export(get_project_risk)
 export(get_project_type)
 export(get_project_walkthrough)
