Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(get_project_risk)
 export(get_project_type)
 export(get_project_walkthrough)
 export(post_highbond_results)
+export(setup_highbond)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,inner_join)
