Fix items in R CMD check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: galvanizer
-Title: Interface to Galvanize internal audit software
+Title: Interface to Galvanize Internal Audit Software
 Version: 0.4.0
 Authors@R: 
     person(given = "Jonathan",
