Update GET functions to be plural

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,24 +8,23 @@ export(create_results_tables)
 export(delete_results_analyses)
 export(delete_results_collections)
 export(delete_results_tables)
-export(get_project)
 export(get_project_actions)
-export(get_project_collaborator)
-export(get_project_control)
-export(get_project_control_test)
-export(get_project_control_test_plan)
+export(get_project_control_test_plans)
+export(get_project_control_tests)
+export(get_project_controls)
 export(get_project_custom_attributes)
-export(get_project_entity)
-export(get_project_issue)
-export(get_project_mitigation)
-export(get_project_narrative)
-export(get_project_objective)
-export(get_project_planning_file)
+export(get_project_entities)
+export(get_project_issues)
+export(get_project_mitigations)
+export(get_project_narratives)
+export(get_project_objectives)
+export(get_project_planning_files)
 export(get_project_request_items)
-export(get_project_result_file)
-export(get_project_risk)
-export(get_project_type)
-export(get_project_walkthrough)
+export(get_project_result_files)
+export(get_project_risks)
+export(get_project_types)
+export(get_project_walkthroughs)
+export(get_projects)
 export(get_results_analyses)
 export(get_results_collections)
 export(get_results_columns)
