--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -25,26 +25,25 @@ reference:
   desc: >
     Functions for downloading data from Highbond Projects
 - contents:
-  - get_project
-  - get_project_planning_file
-  - get_project_result_file
-  - get_project_objective
-  - get_project_narrative
-  - get_project_risk
-  - get_project_control
-  - get_project_mitigation
-  - get_project_control_test_plan
-  - get_project_control_test
-  - get_project_walkthrough
-  - get_project_issue
+  - get_projects
+  - get_project_planning_files
+  - get_project_result_files
+  - get_project_objectives
+  - get_project_narratives
+  - get_project_risks
+  - get_project_controls
+  - get_project_mitigations
+  - get_project_control_test_plans
+  - get_project_control_tests
+  - get_project_walkthroughs
+  - get_project_issues
   - get_project_actions
   - get_project_request_items
-  - get_project_entity
+  - get_project_entities
 - subtitle: "Project settings"
   desc: >
     Functions for downloading configured settings for projects
 - contents:
-  - get_project_type
-  - get_project_collaborator
+  - get_project_types
   - get_project_custom_attributes
 
