Bugfix - Integers were not being recognized as numerics, failing the check prior to upload. Added this to POST functionality and testing.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(setup_highbond)
 export(update_results_analyses)
 export(update_results_collections)
 export(update_results_tables)
+importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,inner_join)
@@ -50,6 +51,8 @@ importFrom(httr,content)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(lubridate,as_datetime)
+importFrom(lubridate,is.POSIXct)
+importFrom(lubridate,is.POSIXlt)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(tibble,as_tibble)
@@ -62,6 +65,7 @@ importFrom(tidyjson,jstring)
 importFrom(tidyjson,spread_all)
 importFrom(tidyjson,spread_values)
 importFrom(tidyr,nest)
+importFrom(tidyselect,vars_select_helpers)
 importFrom(utils,capture.output)
 importFrom(utils,modifyList)
 importFrom(utils,object.size)
