--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(delete_results_analyses)
 export(delete_results_collections)
 export(delete_results_tables)
 export(get_project_actions)
+export(get_project_collaborators)
 export(get_project_control_test_plans)
 export(get_project_control_tests)
 export(get_project_controls)
