Better handling of relationships

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,12 +39,15 @@ export(update_results_tables)
 importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,count)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,vars)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
@@ -62,6 +65,7 @@ importFrom(tidyjson,append_values_string)
 importFrom(tidyjson,enter_object)
 importFrom(tidyjson,gather_array)
 importFrom(tidyjson,gather_object)
+importFrom(tidyjson,json_types)
 importFrom(tidyjson,jstring)
 importFrom(tidyjson,spread_all)
 importFrom(tidyjson,spread_values)
