--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_project_control_test_plans)
 export(get_project_control_tests)
 export(get_project_controls)
 export(get_project_entities)
+export(get_project_entity_categories)
 export(get_project_issues)
 export(get_project_mitigations)
 export(get_project_narratives)
